[project]
name = "pypm2c"
description = "A PowerModels Backend for Grid2Op"
authors = [
    { name = "Ketan Bhardwaj", email = "ketanbj@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    "pybind11",
]
[project.urls]
repository = "https://github.com/ketanbj/pypm2c"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
    "pybind11",
    "pip"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools]